<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBF6DD"
    tools:context=".activities.AddTasksFormActivity">

    <TextView
        android:id="@+id/AddTasksActivityAddTaskTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:text="@string/add_tasks_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/AddTasksActivityTaskTitleInputTextView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="#45028FFA"
        android:ems="10"
        android:hint="@string/task_title"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#6D4C41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTasksFormActivityTaskImageView" />

    <Button
        android:id="@+id/AddTasksActivitySaveTaskButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="#3F51B5"
        android:text="@string/add_tasks_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTasksFormActivityTeamSpinner"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Spinner
        android:id="@+id/AddTasksActivityStateSpinner"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="#45028FFA"
        android:contentDescription="@string/state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTaskDescriptionTaskDescriptionMultiAutoCompleteTextView" />

    <MultiAutoCompleteTextView
        android:id="@+id/AddTaskDescriptionTaskDescriptionMultiAutoCompleteTextView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="#45028FFA"
        android:hint="@string/task_description"
        android:imeOptions="actionDone"
        android:minHeight="48dp"
        android:textColorHint="#6D4C41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTasksActivityTaskTitleInputTextView" />

    <Spinner
        android:id="@+id/AddTasksFormActivityTeamSpinner"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="#45028FFA"
        android:contentDescription="@string/team_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTasksActivityStateSpinner" />

    <ImageView
        android:id="@+id/AddTasksFormActivityTaskImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/task_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddTasksActivityAddTaskTextView"
        app:srcCompat="@drawable/ic_launcher_background" />

</androidx.constraintlayout.widget.ConstraintLayout>